# openai-cli

./: .gitignore  Cargo.toml  README.md  application.yml  build.sh
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/client/: gpt_client.rs  mod.rs  openai_client.rs
src/config/: mod.rs  token_info.rs
src/domain/: mod.rs
src/domain/chat_gpt/: message.rs  mod.rs  session_result.rs
src/domain/openai/: answers.rs  mod.rs  model.rs  question.rs
